language/move-lang/tests/move_check/parser/address_too_long.exp
error: 

   ┌── tests/move_check/parser/address_too_long.move:2:9 ───
   │
 2 │ address 0x112233445566778899101122334455667788992011223344556677889930112233:
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Address is 33 bytes long. The maximum size is 32 bytes
   │

