language/move-lang/tests/move_check/parser/address_too_long.move
// Addresses are at most 32 bytes long.
address 0x112233445566778899101122334455667788992011223344556677889930112233:
